--- a/tsconfig.json
+++ b/tsconfig.json
@@ -16,5 +16,14 @@
     "outDir": "./dist"
   },
   "include": ["src/**/*"],
-  "exclude": ["node_modules", "dist"]
+  "exclude": [
+    "node_modules",
+    "dist",
+    "storybook-static",
+    "coverage",
+    "**/*.stories.tsx",
+    "**/*.test.tsx",
+    "vitest.config.ts",
+    "vitest.setup.ts"
+  ]
 }
