--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
       "import": "./dist/index.mjs",
       "require": "./dist/index.js"
     },
-    "./styles": "./src/styles/accordion.css"
+    "./styles": "./src/styles/index.css"
   },
   "files": [
     "dist",
@@ -46,10 +46,13 @@
     "@types/react-dom": "^18.2.0",
     "@vitejs/plugin-react": "^4.7.0",
     "@vitest/ui": "^2.1.9",
+    "autoprefixer": "^10.4.24",
     "jsdom": "^24.1.3",
+    "postcss": "^8.5.6",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "storybook": "^10.2.4",
+    "tailwindcss": "^4.1.18",
     "tsup": "^8.0.0",
     "typescript": "^5.0.0",
     "vitest": "^2.1.9"
